<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qasper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">Username</string>
    <string name="add_question_title_hint">Title your question</string>
    <string name="add_question_body_hint">Add a body to your question</string>
    <string name="add_question_image">Add an image to the question</string>
    <string name="add_question_include_location">Include Location</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="question_list_add_question">Add Question</string>
    <string name="list_question_read_later">Read Later</string>
    <string name="list_answer_read_later">Read Later</string>
    <string name="add_comment_body_hint">Add your comment</string>
    <string name="welcome_to_qasper">Welcome to Qasper</string>
    <string name="use_google_account_email">Use Google Account email</string>
    <string name="please_choose_how_to_specify_your_username">Please choose how to specify your username</string>
    <string name="choose_your_own_">Choose your own!</string>
    <string name="please_enter_a_username_below_">Please enter a Username below:</string>
    <string name="enter">Enter</string>
    <string name="title_activity_welcomes_screen">Welcome Screen</string>
    <string name="title_activity_answer_view">View Answer</string>

    <!-- Question View -->
    <string name="title_activity_question">Question</string>
    <string name="tab_answers">Answers</string>
    <string name="tab_comments">Comments</string>
    <string name="item_view_add_comment">Add Comment</string>
 <!-- common to answer and question view -->
    <string name="question_add_answer">Add Answer</string>

    <!-- Add Answer Dialog Fragment -->
    <string name="add_answer_body_hint">Add a body to your answer</string>
    <string name="add_answer_image">Add an image to your answer</string>
    <string name="add_answer_err_invalid">The answer you created was invalid.</string>

    <!-- Add Comment Dialog -->
    <string name="add_comment_err_invalid">The comment you created was invalid.</string>
    
    <!-- Answer View -->
    <string name="answer_view_upvote_answer">Upvote Answer</string>
    <string name="answer_view_dummy_username">Username</string>

    <!-- Comment List -->
    <string name="commentlist_comment_placeholder">The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog.</string>
    <string name="commentlist_author_placeholder">Boris</string>
    <string name="viewing_comments">Comment</string>

    <!-- Answer List -->
    <string name="answerlist_body_placeholder">Peter Piper picked a peck of pickled peppers. How many peppers did he pick?</string>
    <string name="answerlist_author_placeholder">Natasha</string>
    <string name="title_activity_search">Search Results</string>
    <string name="enter_search_query">Please enter a search phrase</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="generic_body">Generic Body</string>
    <string name="type">Type</string>
    
    <!-- About Box -->
    <string name="aboutbox_menuitem">About...</string>
	<string name="aboutbox_appname">Qasper</string>
	<string name="aboutbox_tagline">The friendly Q/A app!</string>
	<string name="aboutbox_version">Version 1.0</string>
	<string name="aboutbox_authorheading">Authors:</string>
	<string name="question_title">Question Title</string>
	<string name="question_body">Question Body</string>
	<string name="location_not_set">Location not set</string>
	<string name="include_location_">Include Location?</string>
</resources>
