<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/generic_type"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/question_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fav_highlighted" />

    </LinearLayout>

    <TextView
        android:id="@+id/generic_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_body"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/generic_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/generic_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/list_question_read_later"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:contentDescription="@string/list_question_read_later"
        android:focusable="false"
        android:src="@drawable/ic_action_readlater" />

</LinearLayout>