<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/answer_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="none"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="false"
        android:text="@string/answerlist_body_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/answer_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:autoLink="none"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="false"
        android:text="@string/answerlist_author_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/answerLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_not_set"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="right" >
        <ImageButton
            android:id="@+id/list_answer_read_later"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/list_answer_read_later" 
            android:src="@drawable/ic_action_readlater"
            android:focusable="false"
        />
    </LinearLayout>

</LinearLayout>
