<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/add_question_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_question_title_hint"
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/add_question_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/add_question_body_hint"
        android:inputType="textMultiLine"
        android:minLines="14"
        android:scrollbars="vertical"
        android:singleLine="false" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="116dp"
        android:gravity="start"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="takeAPhoto"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/add_question_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_question_image"
            android:onClick="addImage"
            android:src="@drawable/ic_action_image" />

    </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_image" />

       <CheckBox
           android:id="@+id/questionLocationBox"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/imageView1"
           android:layout_alignParentLeft="true"
           android:text="@string/include_location_" />

    </RelativeLayout>

</LinearLayout>
