<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/comment_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="none"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="false"
        android:text="@string/commentlist_comment_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/comment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:autoLink="none"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="false"
        android:text="@string/commentlist_author_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/commentLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_not_set"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
