<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="116dp"
        android:gravity="start"
        android:orientation="vertical"
        >

         <TextView
             android:id="@+id/answer_body"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:lines="10"
             android:scrollbars="vertical"
             android:text="SomeDummyText so that I can see whats going on in the graphical editor" />

         <ImageView android:id="@+id/answerImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_image"/>
    </RelativeLayout>
   
	<TextView 
        android:id="@+id/answer_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_view_dummy_username"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="right"
        >

        <TextView
            android:id="@+id/answer_upvotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
        
        <ImageButton
            android:id="@+id/answer_view_upvote_answer"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/answer_view_upvote_answer" 
            android:src="@drawable/ic_action_upvote"
            android:onClick="addAnsUpvote"/>
        <ImageButton
            android:id="@+id/answer_view_add_comment"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_view_add_comment" 
            android:src="@drawable/ic_add_comment"
        />
    </LinearLayout>

    <ListView
        android:id="@+id/answer_view_comment_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>
