<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/question_upvoteImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_qasper_logo_white" 
        android:contentDescription="Logo"/>
    
    

    <TextView
        android:id="@+id/aboutbox_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/aboutbox_appname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp"
        android:typeface="sans" />

    
    <TextView
        android:id="@+id/aboutbox_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/aboutbox_tagline"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp"
        android:typeface="sans" />
    
    <TextView
        android:id="@+id/aboutbox_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutbox_version"
        android:layout_gravity="center_horizontal"
        android:textSize="8sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/aboutbox_authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:text="@string/aboutbox_authorheading"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:columnCount="2"
        android:padding="20dp"
        android:rowCount="3" >

    <TextView
        android:id="@+id/aboutbox_author1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stephen Just"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/aboutbox_author2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cody Otto"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/aboutbox_author3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scott Wowk"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/aboutbox_author4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stefan Martynkiw"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/aboutbox_author5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ryan Kusters"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/aboutbox_author6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Brittany Lamorie"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    </GridLayout>

</LinearLayout>
